--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,28 @@
 ---
 language: python
-python: "2.7"
 
-# Use the new container infrastructure
-sudo: false
+services:
+  - docker
 
-# Install ansible
-addons:
-  apt:
-    packages:
-    - python-pip
+env:
+  - OS_VERSION=7
+  - OS_VERSION=6
+
+before_install:
+  - sudo docker pull centos:${OS_VERSION}
 
 install:
-  # Install ansible
-  - pip install ansible
-
-  # Check ansible version
-  - ansible --version
-
-  # Create ansible.cfg with correct roles_path
-  - printf '[defaults]\nroles_path=../' >ansible.cfg
+  - sudo docker run --detach --volume="${PWD}":/etc/ansible/roles/phabricator:ro --name centos-${OS_VERSION} centos:${OS_VERSION} sleep 300
+  - sudo docker exec centos-${OS_VERSION} yum -y install ansible
 
 script:
-  # Basic role syntax check
-  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+  # Check syntax of ansible playbook
+  - sudo docker exec centos-${OS_VERSION} ansible-playbook /etc/ansible/roles/phabricator/tests/test.yml --syntax-check
+  # Run ansible playbook
+  - sudo docker exec centos-${OS_VERSION} ansible-playbook /etc/ansible/roles/phabricator/tests/test.yml
+
+after_script:
+  - sudo docker stop centos-${OS_VERSION}
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
